# hashFrag

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  tutorial_brief.ipynb
.ipynb_checkpoints/: tutorial_brief-checkpoint.ipynb
data/: example_full_dataset.fa  example_test_split.filtered.fa
data/K562.sample_10000.hashFrag.create_splits2.work/: hashFrag_lightning.homologous_groups.tsv
docs/: advanced_usage.md  basic_usage.md  conf.py  index.md  installation.md
docs/source/: conf.py  index.rst
docs/tutorials/: hashFrag_create_splits_example.md  hashFrag_filter_existing_splits_example.md  hashFrag_stratify_existing_splits_example.md  index.md
src/: blastn.py  compute_recall.py  filter_existing_splits.py  filter_false_positives.py  hashFrag  identify_homologous_groups.py  lsh_forest.py  messages.json  stratify_test_split.py
src/hashFrag/: main.py
src/modules/: blastn.py  blastn_array_module.py  blastn_module.py  create_orthogonal_folds_module.py  create_orthogonal_splits.py  create_orthogonal_splits_module.py  create_orthogonal_splits_pipeline.py  filter_candidates.py  filter_candidates_module.py  filter_existing_splits.py  filter_existing_splits_pipeline.py  filter_false_positives.py  filter_test_split_module.py  identify_homologous_groups.py  identify_homologous_groups_module.py  (+4 more)
tutorial/: hashFrag_MPRA_dataset_example.ipynb  hashFrag_create_splits_example.ipynb  hashFrag_existing_splits_example.ipynb  hashFrag_filter_existing_splits_example.ipynb  hashFrag_stratify_existing_splits_example.ipynb
(+19 files in other folders)
